# wl-ls

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_xcode.sh  configure_xcode.sh  run.sh  run_tests.sh
data/: input.wl  input2.wl  input3.wl  input4.wl  input5.wl
data/input/: input6.wl
src/: CMakeLists.txt  main.cpp
src/linkedlist/: CMakeLists.txt  LinkedList.cpp  LinkedList.h
src/linkedlist/linkedlistnode/: CMakeLists.txt  LLNode.cpp  LLNode.h
src/weirdlanguage/: CMakeLists.txt  WLInvoker.cpp  WLInvoker.h  WLLanguageSystem.cpp  WLLanguageSystem.h  WLReceiver.cpp  WLReceiver.h
src/weirdlanguage/wlcommands/: AddInstruction.cpp  AddInstruction.h  CMakeLists.txt  ChsInstruction.cpp  ChsInstruction.h  CombineInstruction.cpp  CombineInstruction.h  CopyInstruction.cpp  CopyInstruction.h  GetInstruction.cpp  GetInstruction.h  GotoInstruction.cpp  GotoInstruction.h  HltInstruction.cpp  HltInstruction.h  IfInstruction.cpp  IfInstruction.h  SetInstruction.cpp  SetInstruction.h  VarIntInstruction.cpp  VarIntInstruction.h  VarListInstruction.cpp  VarListInstruction.h  WLCommand.cpp  WLCommand.h  WLCommandFactory.cpp  WLCommandFactory.h
tests/: CMakeLists.txt
tests/lib/googlemock/include/gmock/: gmock-spec-builders.h
tests/lib/googletest/samples/: sample1_unittest.cc
tests/src/: LinkedListTests.cpp  WLLSTests.cpp  tests.cpp
